--- a/client/src/App.css
+++ b/client/src/App.css
@@ -14,3 +14,11 @@
     display: flex;
     flex-direction: column;
 }
+
+.link {
+    background-color: var(--primary-color);
+    padding: 1rem 1.5rem;
+    color: var(--white-color);
+    text-decoration: none;
+    cursor: pointer;
+}
