--- a/client/src/pages/inbox/inbox.css
+++ b/client/src/pages/inbox/inbox.css
@@ -1,6 +1,6 @@
 .inbox {
-    background-color: var(--primary-color);
-    color: var(--secondary-color);
+    background-color: var(--secondary-color);
+    color: #000;
     padding: 1.5rem;
     width: 90%;
     margin: 0 auto;
@@ -13,7 +13,7 @@
 }
 
 .unread {
-    display: none;
+color: red;
 }
 
 .read {
@@ -23,9 +23,11 @@
 
 .links {
     text-decoration: none;
-    color: initial;
+    color: var(--primary-color);
 }
-
+.links:hover, .links:active {
+    color: #000;
+}
 .inbox .row {
     /* border: 1px solid brown; */
     justify-content: left;
